# rcat

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
revshells/: revshell_tcp.ps1
src/: common.rs  connect.rs  main.rs  newline.rs  server.rs  stream.rs  tcp.rs  terminal_sheenanigans.rs  tls.rs  udp.rs  upgrade_windows_shell.rs
test/: domain.crt  domain.csr  domain.key
