[package]
name = "rcat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
ctrlc = "3.4.5"
rand = "0.9.0"
terminal_size = "0.4.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
webpki-roots = "0.26.8"
